v8.0 - debug root
- Lists all su locations on startup
- Uses PackageInfo.dataDir instead of sourceDir
- More detailed logging
- More su paths including magisk

Co-authored-by: openhands <openhands@all-hands.dev>